tests/baselines/reference/assignmentCompatWithObjectMembers5.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers5.ts(13,1): error TS2322: Type 'I' is not assignable to type 'C'.
  Index signature is missing in type 'C'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers5.ts(14,1): error TS2322: Type 'C' is not assignable to type 'I'.
  Index signature is missing in type 'I'.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers5.ts (2 errors) ====
    class C {
        foo: string;
    }
    
    var c: C;
    
    interface I {
        fooo: string;
    }
    
    var i: I;
    
    c = i; // error
    ~
!!! error TS2322: Type 'I' is not assignable to type 'C'.
!!! error TS2322:   Index signature is missing in type 'C'.
    i = c; // error
    ~
!!! error TS2322: Type 'C' is not assignable to type 'I'.
!!! error TS2322:   Index signature is missing in type 'I'.